[gd_scene load_steps=2 format=3 uid="uid://dd4inkvul2lyt"]

[ext_resource type="Script" uid="uid://xkdwg6m01h6i" path="res://scenes/ui/main_menu.gd" id="1_vjtqc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -20.0
offset_right = 15.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjtqc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 105.0
offset_bottom = 129.0
color = Color(0.078431375, 0.078431375, 0.11764706, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 102.0
offset_bottom = 127.0
theme_override_constants/separation = 20

[node name="GameTitle" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "YOUR GAME TITLE"
horizontal_alignment = 1

[node name="TitleSpacer" type="MarginContainer" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="MenuContainer/MenuButtons"]
layout_mode = 2
text = "Singleplayer
"

[node name="Button2" type="Button" parent="MenuContainer/MenuButtons"]
layout_mode = 2
text = "Multiplayer"

[node name="Button3" type="Button" parent="MenuContainer/MenuButtons"]
layout_mode = 2
text = "Settings"

[node name="Button4" type="Button" parent="MenuContainer/MenuButtons"]
layout_mode = 2
text = "Exit
"

[node name="MultiplayerMenu" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(500, 400)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="MultiplayerMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MultiplayerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="Button" type="Button" parent="MultiplayerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host game
"

[node name="ConnectPanel" type="VBoxContainer" parent="MultiplayerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Ip address" type="LineEdit" parent="MultiplayerMenu/MarginContainer/VBoxContainer/ConnectPanel"]
layout_mode = 2

[node name="Button" type="Button" parent="MultiplayerMenu/MarginContainer/VBoxContainer/ConnectPanel"]
layout_mode = 2
text = "Connect to game"

[node name="Button2" type="Button" parent="MultiplayerMenu/MarginContainer/VBoxContainer/ConnectPanel"]
layout_mode = 2
text = "Back"

[node name="SettingsMenu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Label2" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Soon"

[node name="Button" type="Button" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"
